# MSEC

./: .gitignore  CMakeLists.txt  CopyOfCMakeCache.txt  LICENSE  README.md  gtkmm-3.0.pc  ui1.glade
src/: Header.h  MainWindow.cpp  MainWindow.h  Solver.cpp  Solver.h  main.cpp
